8338100: C2: assert(!n_loop->is_member(get_loop(lca))) failed: control must not be back in the loop

Reviewed-by: mdoerr
Backport-of: e203df46faf610e35e2c2510271ad68199f4fa3f